[package]
name = "blend-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
zephyr-sdk = { version = "0.2.4", path = "../../rs-zephyr-sdk/zephyr-sdk" }
serde = { version = "1", features = ["derive"] }
stellar-strkey = { version = "0.0.8" }
serde_json = "1.0"
urlencoding = "2.1.3"

[dependencies.soroban-fixed-point-math]
version = "1.0.0"

[dev-dependencies]
tokio = {version="1", features = ["full"]}
zephyr-vm = { git = "https://github.com/xycloo/zephyr", rev = "2193796", features = [] }

[dev-dependencies.stellar-xdr]
version = "=22.0.0-rc.1.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
